{
  "version": 4,
  "terraform_version": "1.1.9",
  "serial": 288,
  "lineage": "a7206ab5-fe19-ec6a-04ac-ace4f177a144",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "mercurypubtroute",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:610044975486:route-table/rtb-0f513db3773a0ea71",
            "default_route_table_id": "rtb-0f513db3773a0ea71",
            "id": "rtb-0f513db3773a0ea71",
            "owner_id": "610044975486",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ef13493f37c13fd9",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "MercuryPubRouteTable"
            },
            "tags_all": {
              "Name": "MercuryPubRouteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a96fa110d3bf3af2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03b9d329adb3a8c24",
            "association_id": "eipassoc-0b77250e6032bdcb8",
            "domain": "vpc",
            "id": "eipalloc-03b9d329adb3a8c24",
            "network_border_group": "us-east-2",
            "network_interface": "eni-01b6fcdf8964e4041",
            "private_dns": "ip-10-0-10-13.us-east-2.compute.internal",
            "private_ip": "10.0.10.13",
            "public_dns": "ec2-3-19-97-22.us-east-2.compute.amazonaws.com",
            "public_ip": "3.19.97.22",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "MercuryEIP"
            },
            "tags_all": {
              "Name": "MercuryEIP"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2Backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fe23c115c3ba9bac",
            "arn": "arn:aws:ec2:us-east-2:610044975486:instance/i-07bf81def0c999ce1",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07bf81def0c999ce1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0ab8887aa794ab845",
            "private_dns": "ip-10-0-20-70.us-east-2.compute.internal",
            "private_ip": "10.0.20.70",
            "public_ip": "3.133.145.121",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-031d4fd25bb28c5a2",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0143f1853d402231e"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0938269b2896661d2",
            "tags": {
              "Name": "PublicEC2Backend"
            },
            "tags_all": {
              "Name": "PublicEC2Backend"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0143f1853d402231e"
            ]
          },
          "dependencies": [
            "aws_security_group.block_tls",
            "aws_subnet.pvt-backend"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2webserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fe23c115c3ba9bac",
            "arn": "arn:aws:ec2:us-east-2:610044975486:instance/i-00e131f22ef285c5c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00e131f22ef285c5c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-02a78e3c06c81567d",
            "private_dns": "ip-10-0-20-211.us-east-2.compute.internal",
            "private_ip": "10.0.20.211",
            "public_ip": "3.128.200.206",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b2949b44e8105634",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0143f1853d402231e"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0938269b2896661d2",
            "tags": {
              "Name": "PublicEC2Webserver"
            },
            "tags_all": {
              "Name": "PublicEC2Webserver"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0143f1853d402231e"
            ]
          },
          "dependencies": [
            "aws_security_group.block_tls",
            "aws_subnet.pvt-backend"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:610044975486:internet-gateway/igw-0ef13493f37c13fd9",
            "id": "igw-0ef13493f37c13fd9",
            "owner_id": "610044975486",
            "tags": {
              "Name": "MercuryIGW"
            },
            "tags_all": {
              "Name": "MercuryIGW"
            },
            "vpc_id": "vpc-0a96fa110d3bf3af2"
          },
          "dependencies": [
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "nlb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:610044975486:loadbalancer/net/mercurynlb/eccbcb6ae7160feb",
            "arn_suffix": "net/mercurynlb/eccbcb6ae7160feb",
            "dns_name": "mercurynlb-eccbcb6ae7160feb.elb.us-east-2.amazonaws.com",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:us-east-2:610044975486:loadbalancer/net/mercurynlb/eccbcb6ae7160feb",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "mercurynlb",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-05421579951a17669"
              }
            ],
            "subnets": [
              "subnet-05421579951a17669"
            ],
            "tags": {
              "Name": "MercuryNLB80"
            },
            "tags_all": {
              "Name": "MercuryNLB80"
            },
            "vpc_id": "vpc-0a96fa110d3bf3af2",
            "zone_id": "ZLMOA37VPKANP"
          },
          "dependencies": [
            "aws_subnet.pub-frontend"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "httpTG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:610044975486:targetgroup/FrontendHttpTG/e6acb78357aaa3f4",
            "arn_suffix": "targetgroup/FrontendHttpTG/e6acb78357aaa3f4",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 100,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 60,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:610044975486:targetgroup/FrontendHttpTG/e6acb78357aaa3f4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "FrontendHttpTG",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "FrontendHttpTG"
            },
            "tags_all": {
              "Name": "FrontendHttpTG"
            },
            "target_type": "instance",
            "vpc_id": "vpc-0a96fa110d3bf3af2"
          },
          "dependencies": [
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "lbbackend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:610044975486:targetgroup/FrontendHttpTG/e6acb78357aaa3f4-20220504131752590700000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:610044975486:targetgroup/FrontendHttpTG/e6acb78357aaa3f4",
            "target_id": "i-07bf81def0c999ce1"
          },
          "dependencies": [
            "aws_instance.ec2Backend",
            "aws_lb_target_group.httpTG",
            "aws_security_group.block_tls",
            "aws_subnet.pvt-backend"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "lbfrontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:610044975486:targetgroup/FrontendHttpTG/e6acb78357aaa3f4-20220504131802719700000002",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:610044975486:targetgroup/FrontendHttpTG/e6acb78357aaa3f4",
            "target_id": "i-00e131f22ef285c5c"
          },
          "dependencies": [
            "aws_instance.ec2webserver",
            "aws_lb_target_group.httpTG",
            "aws_security_group.block_tls",
            "aws_subnet.pvt-backend"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "pubnat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03b9d329adb3a8c24",
            "connectivity_type": "public",
            "id": "nat-09d7e28b7912e5200",
            "network_interface_id": "eni-01b6fcdf8964e4041",
            "private_ip": "10.0.10.13",
            "public_ip": "3.19.97.22",
            "subnet_id": "subnet-05421579951a17669",
            "tags": {
              "Name": "MercuryPublicNAT"
            },
            "tags_all": {
              "Name": "MercuryPublicNAT"
            }
          },
          "dependencies": [
            "aws_eip.lb",
            "aws_subnet.pub-frontend",
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "mercurypvtroute",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:610044975486:route-table/rtb-0ff023569c8b57c89",
            "id": "rtb-0ff023569c8b57c89",
            "owner_id": "610044975486",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-09d7e28b7912e5200",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "MercuryPvtRouteTable"
            },
            "tags_all": {
              "Name": "MercuryPvtRouteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a96fa110d3bf3af2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.pubnat",
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "mercurypubtroute",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d858c550d3b8b795",
            "route_table_id": "rtb-0f513db3773a0ea71",
            "subnet_id": "subnet-05421579951a17669"
          },
          "dependencies": [
            "aws_subnet.pub-frontend",
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "routetablepvtsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02491e99d72b76449",
            "route_table_id": "rtb-0ff023569c8b57c89",
            "subnet_id": "subnet-0938269b2896661d2"
          },
          "dependencies": [
            "aws_eip.lb",
            "aws_nat_gateway.pubnat",
            "aws_route_table.mercurypvtroute",
            "aws_subnet.pub-frontend",
            "aws_subnet.pvt-backend",
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_tls",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:610044975486:security-group/sg-062bdde7b0fd386b5",
            "description": "Allow 22 80 8080 443 inbound traffic",
            "egress": [],
            "id": "sg-062bdde7b0fd386b5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from webservice ",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "Public",
            "name_prefix": "",
            "owner_id": "610044975486",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Public -22 80 8080 443"
            },
            "tags_all": {
              "Name": "Public -22 80 8080 443"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a96fa110d3bf3af2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "block_tls",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:610044975486:security-group/sg-0143f1853d402231e",
            "description": "backend SG",
            "egress": [],
            "id": "sg-0143f1853d402231e",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "HTTP from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-062bdde7b0fd386b5"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "TLS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-062bdde7b0fd386b5"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "Private",
            "name_prefix": "",
            "owner_id": "610044975486",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Private SG "
            },
            "tags_all": {
              "Name": "Private SG "
            },
            "timeouts": null,
            "vpc_id": "vpc-0a96fa110d3bf3af2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.allow_tls",
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub-frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:610044975486:subnet/subnet-05421579951a17669",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05421579951a17669",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "610044975486",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "frontend_public_subnet"
            },
            "tags_all": {
              "Name": "frontend_public_subnet"
            },
            "vpc_id": "vpc-0a96fa110d3bf3af2"
          },
          "dependencies": [
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pvt-backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:610044975486:subnet/subnet-0938269b2896661d2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.20.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0938269b2896661d2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "610044975486",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "backend_private_subnet"
            },
            "tags_all": {
              "Name": "backend_private_subnet"
            },
            "vpc_id": "vpc-0a96fa110d3bf3af2"
          },
          "dependencies": [
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "mainvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:610044975486:vpc/vpc-0a96fa110d3bf3af2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05d44734a4dec6443",
            "default_route_table_id": "rtb-0f513db3773a0ea71",
            "default_security_group_id": "sg-06d70248b5a1402b0",
            "dhcp_options_id": "dopt-039b2bec3a46e5f4c",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0a96fa110d3bf3af2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f513db3773a0ea71",
            "owner_id": "610044975486",
            "tags": {
              "Name": "MercuryVPC"
            },
            "tags_all": {
              "Name": "MercuryVPC"
            }
          }
        }
      ]
    }
  ]
}